--- a/week04/lesson.html
+++ b/week04/lesson.html
@@ -13084,7 +13084,7 @@ div#notebook {
 <li>Learn more OpenCV functions.</li>
 </ul>
 <p><strong>Note</strong></p>
-<p>Please code and try these (and other) code samples found here or on the OpenCV website.</p>
+<p>Please copy and try these (and other) code samples found here or on the OpenCV website.</p>
 
 </div>
 </div>
