--- a/week06/lesson.html
+++ b/week06/lesson.html
@@ -13123,7 +13123,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In [6]:</div>
+<div class="prompt input_prompt">In [1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">matplotlib</span> <span class="kn">import</span> <span class="n">pyplot</span> <span class="k">as</span> <span class="n">plt</span>
@@ -13371,7 +13371,7 @@ div#notebook {
 <p>Please watch the following video:</p>
 <p><a href="https://www.youtube.com/watch?v=C_zFhWdM4ic">Video on convolution Kernel</a></p>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/Kernel_(image_processing">https://en.wikipedia.org/wiki/Kernel_(image_processing</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/Kernel_(image_processing">image_processing</a>)</li>
 <li><a href="http://setosa.io/ev/image-kernels/">http://setosa.io/ev/image-kernels/</a></li>
 <li><a href="https://docs.opencv.org/3.4/d5/d69/tutorial_py_non_local_means.html">https://docs.opencv.org/3.4/d5/d69/tutorial_py_non_local_means.html</a></li>
 </ul>
