--- a/week06/assignment/project.html
+++ b/week06/assignment/project.html
@@ -13127,6 +13127,10 @@ div#notebook {
 <p>Suggestions:</p>
 <ul>
 <li>Get your project code to work with the sample candle images.  You should be able to find the same start and end frames for the loop (or close to it) and be able to create the same results as outlined in this document.</li>
+<li>Do you processing and comparing of the images using grayscale images.  The final looping video needs to be in color.</li>
+<li>You will be able to process the frames of your video faster if you load them all into a list.  However, depending on the number of the frames and their size, you might run out of memory doing this.</li>
+<li>The function write_diff_matrix() will be called at the end of your program once.</li>
+<li>The function image_compare() requires grayscale images.</li>
 </ul>
 
 </div>
