--- a/week07/lesson.html
+++ b/week07/lesson.html
@@ -13148,7 +13148,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Bluring-an-image">Bluring an image<a class="anchor-link" href="#Bluring-an-image">¶</a></h2><p>It is important to blur an image to remove noise from it.  The one used the most is Caussian blur since it removes noise and also keeps edges.</p>
+<h2 id="Blurring-an-image">Blurring an image<a class="anchor-link" href="#Blurring-an-image">¶</a></h2><p>It is important to blur an image to remove noise from it.  The one used the most is Caussian blur since it removes noise and also keeps edges.</p>
 <p>function: <strong>cv2.GaussianBlur()</strong>
 <a href="https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_filtering/py_filtering.html">Link to documentation</a></p>
 
