--- a/week09/lesson.html
+++ b/week09/lesson.html
@@ -13089,7 +13089,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Topic">Topic<a class="anchor-link" href="#Topic">¶</a></h2><p>There are a number of line drawing algorithms that have been developed.  In today's lesson you will be downloading the Python file <code>lesson.py</code> from github and implementing a line drawing function.</p>
+<h2 id="Topic">Topic<a class="anchor-link" href="#Topic">¶</a></h2><p>There are a number of line drawing algorithms that have been developed.  In today's lesson you will be downloading the Python file <code>lesson.py</code> from github folder <code>week 09</code> and implementing a line drawing function.</p>
 
 </div>
 </div>
