Link to line equation

--- a/week09/lesson.html
+++ b/week09/lesson.html
@@ -13090,6 +13090,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Topic">Topic<a class="anchor-link" href="#Topic">¶</a></h2><p>There are a number of line drawing algorithms that have been developed.  In today's lesson you will be downloading the Python file <code>lesson.py</code> from github folder <code>week 09</code> and implementing a line drawing function.</p>
+<p>Here is a website on the <a href="https://www.mathsisfun.com/algebra/line-equation-point-slope.html">line equation</a></p>
 
 </div>
 </div>
